@@ -14,6 +14,8 @@ For a complete change history, please see the Subversion log comments.
 Current Version (SVN trunk):
 ----------------------------
 
+- Avoid the crash if anglemode 'FOLLOW' is specified with bitmap fonts. (#3379)
+
 - Add argument check for processTemplate, processLegendTemplate and 
   processQueryTemplate in the C# bindings (#3699)
 
